update php and supervisord

--- a/etc/supervisor/conf.d/php-fpm.conf
+++ b/etc/supervisor/conf.d/php-fpm.conf
@@ -1,2 +1,2 @@
-#[program:php-fpm]
-#command=/usr/sbin/nginx -g "daemon off";
+[program:php-fpm]
+command=/usr/local/sbin/php-fpm --allow-to-run-as-root
