--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ install:
   - docker run -d --name php php
 
 script:
-  - docker ps | grep -q php
+  - docker ps | grep php
+  - docker exec php which php
+  - docker exec php ps aux | grep php-fpm
