--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
 services:
   - docker
 
-install:
-  - docker build -t php .
-  - docker run -d --name php php
-  - sleep 10
-
 script:
-  - docker ps | grep php
-  - docker exec php which php
-  - docker exec php which php-fpm
-  - docker exec php ps aux | grep php-fpm
+  - ./test.sh
