--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -41,3 +41,11 @@ services:
     build:
       context: .
       dockerfile: 7.2/fpm-alpine/Dockerfile
+  php-7.3-cli-alpine:
+    build:
+      context: .
+      dockerfile: 7.3/cli-alpine/Dockerfile
+  php-7.3-fpm-alpine:
+    build:
+      context: .
+      dockerfile: 7.3/fpm-alpine/Dockerfile
