add php 7.2 with common utilities

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -49,6 +49,10 @@ services:
     build:
       context: .
       dockerfile: 7.2/fpm-alpine/Dockerfile
+  php-7.2-fpm-alpine-common:
+    build:
+      context: .
+      dockerfile: 7.2/fpm-alpine-common/Dockerfile
   php-7.3-cli-alpine:
     build:
       context: .
