--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -13,6 +13,10 @@ services:
     build:
       context: .
       dockerfile: 5.6/fpm-alpine/Dockerfile
+  php-5.6-fpm-alpine-common:
+    build:
+      context: .
+      dockerfile: 5.6/fpm-alpine-common/Dockerfile
   php-5.6-fpm-stretch:
     build:
       context: .
