add PHP 7.3 with common tools

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -65,3 +65,7 @@ services:
     build:
       context: .
       dockerfile: 7.3/fpm-alpine/Dockerfile
+  php-7.3-fpm-alpine-common:
+    build:
+      context: .
+      dockerfile: 7.3/fpm-alpine-common/Dockerfile
