update composer integration

--- a/7.3/fpm-stretch/Dockerfile
+++ b/7.3/fpm-stretch/Dockerfile
@@ -1,11 +1,5 @@
 FROM php:7.3-fpm-stretch
 LABEL maintainer "Patrick.Baber <patrick.baber@servivum.com>"
 
-ENV COMPOSER_VERSION "1.8.4"
-ENV COMPOSER_SHA256_HASH "1722826c8fbeaf2d6cdd31c9c9af38694d6383a0f2bf476fe6bbd30939de058a"
-
 # Install Composer
-RUN curl -o composer.phar https://getcomposer.org/download/${COMPOSER_VERSION}/composer.phar && \
-    openssl sha256 composer.phar | grep "${COMPOSER_SHA256_HASH}" && \
-    mv composer.phar /usr/local/bin/composer && \
-    chmod +x /usr/local/bin/composer
+COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
