--- a/7.0/fpm-alpine-common/Dockerfile
+++ b/7.0/fpm-alpine-common/Dockerfile
@@ -1,9 +1,6 @@
 FROM php:7.0-fpm-alpine
 LABEL maintainer "Patrick.Baber <patrick.baber@servivum.com>"
 
-ENV COMPOSER_VERSION "1.8.4"
-ENV COMPOSER_SHA256_HASH "1722826c8fbeaf2d6cdd31c9c9af38694d6383a0f2bf476fe6bbd30939de058a"
-
 # Change UID and GID of www-data user
 RUN apk --no-cache add shadow && \
     groupmod -g 101 www-data && \
@@ -51,7 +48,4 @@ RUN buildDeps=" \
     apk del $buildDeps
 
 # Install Composer
-RUN wget https://getcomposer.org/download/${COMPOSER_VERSION}/composer.phar && \
-    openssl sha256 composer.phar | grep "${COMPOSER_SHA256_HASH}" && \
-    mv composer.phar /usr/local/bin/composer && \
-    chmod +x /usr/local/bin/composer
+COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
