--- a/7.3/fpm-alpine-common/Dockerfile
+++ b/7.3/fpm-alpine-common/Dockerfile
@@ -17,6 +17,7 @@ RUN buildDeps=" \
         git \
         freetype-dev \
         icu-dev \
+        imagemagick \
         libjpeg-turbo-dev \
         libldap \
         libpng-dev \
