--- a/7.1/fpm-stretch/Dockerfile
+++ b/7.1/fpm-stretch/Dockerfile
@@ -1,5 +1,8 @@
 FROM php:7.1-fpm-stretch
 LABEL maintainer "Patrick.Baber <patrick.baber@servivum.com>"
 
+# Use the default production configuration
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+
 # Install Composer
 COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
