add production and common configs

--- a/7.2/fpm-alpine-common/Dockerfile
+++ b/7.2/fpm-alpine-common/Dockerfile
@@ -49,5 +49,8 @@ RUN buildDeps=" \
 # Use the default production configuration
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
+# Override with common settings
+COPY config/common.ini $PHP_INI_DIR/conf.d/
+
 # Install Composer
 COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
