--- a/7.2/fpm-stretch/Dockerfile
+++ b/7.2/fpm-stretch/Dockerfile
@@ -4,5 +4,8 @@ LABEL maintainer "Patrick.Baber <patrick.baber@servivum.com>"
 # Use the default production configuration
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
+# Override with common settings
+COPY config/common.ini $PHP_INI_DIR/conf.d/
+
 # Install Composer
 COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
