fix path to composer

--- a/5.6/cli-stretch/Dockerfile
+++ b/5.6/cli-stretch/Dockerfile
@@ -5,4 +5,4 @@ LABEL maintainer "Patrick.Baber <patrick.baber@servivum.com>"
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # Install Composer
-COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
+COPY --from=composer:1.8 /usr/bin/composer /usr/local/bin/composer
