--- a/7.2/fpm-alpine-common/Dockerfile
+++ b/7.2/fpm-alpine-common/Dockerfile
@@ -53,4 +53,4 @@ RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 COPY config/common.ini $PHP_INI_DIR/conf.d/
 
 # Install Composer
-COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
+COPY --from=composer:1.8 /usr/bin/composer /usr/local/bin/composer
