--- a/7.1/fpm-alpine/Dockerfile
+++ b/7.1/fpm-alpine/Dockerfile
@@ -11,4 +11,4 @@ RUN apk --no-cache add shadow && \
 RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # Install Composer
-COPY --from=composer:1.8 /usr/bin/composer /usr/bin/local/composer
+COPY --from=composer:1.8 /usr/bin/composer /usr/local/bin/composer
