--- a/config/common.ini
+++ b/config/common.ini
@@ -1,4 +1,5 @@
-max_execution_time = 240
-upload_max_filesize = 100M
-post_max_size = 100M
 expose_php = Off
+max_execution_time = 240
+max_input_vars = 1500
+post_max_size = 100M
+upload_max_filesize = 100M
